TiledBackingStore: Prevent partial tile updates when they intersect the keep rect. https://bugs.webkit.org/show_bug.cgi?id=85488

Reviewed by Kenneth Rohde Christiansen.

Right now an invalidate can cause problems for tiles on the boundary of the keep
rect. Intersecting the dirty rect causes only part of the tile to be updated,
and the glitch becomes visible if the user scrolls this tile back into the viewport.

* platform/graphics/TiledBackingStore.cpp:
(WebCore::TiledBackingStore::invalidate):


Canonical link: https://commits.webkit.org/103935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116938 268f45cc-cd09-0410-ab3c-d52691b4dbfc